adding d3 for visual

--- a/career_radar.css
+++ b/career_radar.css
@@ -1,15 +1,13 @@
 /* CSS declarations go here */
 
 article#user_dets {
-
-
     width: 100%;
     margin: auto;
     border: 1px solid green;
 }
 
 article {
-    float: left;
+    /*float: left;*/
     width: 20%;
     margin: 2px;
     border: 1px solid black;
@@ -25,4 +23,9 @@ body {
 
 #skills_area {
     margin: auto;
+}
+
+#chart_area {
+    margin: auto;
+    border: 1px solid black;
 }
